--- a/index.html
+++ b/index.html
@@ -593,7 +593,7 @@
 						<ul class="fh5co-contact-info">
 							<li class="fh5co-contact-address ">
 								<i class="icon-home"></i>
-								R-69 Ancholi ,Federal B Area <br>Karachi,Pakistan
+								R-69 Ancholi ,Federal B Area lund <br>Karachi,Pakistan
 							</li>
 							<li><i class="icon-phone"></i> (123) 465-6789</li>
 							<li><i class="icon-envelope"></i>info@khaneyseon.com</li>
