--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 		</div>
 
 		<div id="fh5co-about" data-section="about">
-			<div class="fh5co-2col fh5co-bg to-animate-2" style="background-image: url(images/res_img_1.jpg)"></div>
+			<div class="fh5co-2col fh5co-bg to-animate-2" style="background-image: url(images/ABOUTUS.jpg)"></div>
 			<div class="fh5co-2col fh5co-text">
 				<h2 class="heading to-animate">About Us</h2>
 				<p class="to-animate"><span class="firstcharacter">I</span>naugurated on the 10th of April in 2020, "KHANAY SE ON",started serving authentic Pakistani dishes and its signature Bar.B.Q dishes. The sincere efforts of our visionary founders made "KHANAY SE ON" a modern symbol of hygiene & quality, and within months their aspirations yielded fruitful results. Today, "KHANAY SE ON" is credited as one of the pioneers in true Bar.B.Q dining.
@@ -180,16 +180,16 @@
 				<div class="row">
 					<div class="fh5co-grid">
 						<div class="fh5co-v-half to-animate-2">
-							<div class="fh5co-v-col-2 fh5co-bg-img" style="background-image: url(images/res_img_1.jpg)"></div>
+							<div class="fh5co-v-col-2 fh5co-bg-img" style="background-image: url(images/mashroomm.jpg)"></div>
 							<div class="fh5co-v-col-2 fh5co-text fh5co-special-1 arrow-left">
 								<h2>Fresh Mushrooms</h2>
 								<span class="pricing">$7.50</span>
 								<p></p>
-							</div>
+							</div> 
 						</div>
 						<div class="fh5co-v-half">
 							<div class="fh5co-h-row-2 to-animate-2">
-								<div class="fh5co-v-col-2 fh5co-bg-img" style="background-image: url(images/res_img_2.jpg)"></div>
+								<div class="fh5co-v-col-2 fh5co-bg-img" style="background-image: url(images/grilledchickensalad.jpg)"></div>
 								<div class="fh5co-v-col-2 fh5co-text arrow-left">
 									<h2>Grilled Chiken Salad</h2>
 									<span class="pricing">$12.00</span>
@@ -197,7 +197,7 @@
 								</div>
 							</div>
 							<div class="fh5co-h-row-2 fh5co-reversed to-animate-2">
-								<div class="fh5co-v-col-2 fh5co-bg-img" style="background-image: url(images/res_img_8.jpg)"></div>
+								<div class="fh5co-v-col-2 fh5co-bg-img" style="background-image: url(images/Cheese-Garlic-Crack-Bread.jpg)"></div>
 								<div class="fh5co-v-col-2 fh5co-text arrow-right">
 									<h2>Cheese and Garlic Toast</h2>
 									<span class="pricing">$4.50</span>
@@ -208,7 +208,7 @@
 
 						<div class="fh5co-v-half">
 							<div class="fh5co-h-row-2 fh5co-reversed to-animate-2">
-								<div class="fh5co-v-col-2 fh5co-bg-img" style="background-image: url(images/res_img_7.jpg)"></div>
+								<div class="fh5co-v-col-2 fh5co-bg-img" style="background-image: url(images/-roast-chicken.jpg)"></div>
 								<div class="fh5co-v-col-2 fh5co-text arrow-right">
 									<h2>Organic Egg</h2>
 									<span class="pricing">$4.99</span>
@@ -216,7 +216,7 @@
 								</div>
 							</div>
 							<div class="fh5co-h-row-2 to-animate-2">
-								<div class="fh5co-v-col-2 fh5co-bg-img" style="background-image: url(images/res_img_6.jpg)"></div>
+								<div class="fh5co-v-col-2 fh5co-bg-img" style="background-image: url(images/chiken.JPEG )"></div>
 								<div class="fh5co-v-col-2 fh5co-text arrow-left">
 									<h2>Salad with Crispy Chicken</h2>
 									<span class="pricing">$8.50</span>
@@ -225,7 +225,7 @@
 							</div>
 						</div>
 						<div class="fh5co-v-half to-animate-2">
-							<div class="fh5co-v-col-2 fh5co-bg-img" style="background-image: url(images/res_img_3.jpg)"></div>
+							<div class="fh5co-v-col-2 fh5co-bg-img" style="background-image: url(images/Tomato-Chicken-Rice-Soup.jpg)"></div>
 							<div class="fh5co-v-col-2 fh5co-text fh5co-special-1 arrow-left">
 								<h2>Tomato Soup with Chicken</h2>
 								<span class="pricing">$12.99</span>
@@ -593,7 +593,7 @@
 						<ul class="fh5co-contact-info">
 							<li class="fh5co-contact-address ">
 								<i class="icon-home"></i>
-								R-69 Ancholi ,Federal B Area lund <br>Karachi,Pakistan
+								R-69 Ancholi ,Federal B Area <br>Karachi,Pakistan
 							</li>
 							<li><i class="icon-phone"></i> (123) 465-6789</li>
 							<li><i class="icon-envelope"></i>info@khaneyseon.com</li>
