--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
 				<div class="row row-padded">
 					<div class="col-md-6">
 						<div class="fh5co-food-menu to-animate-2">
-							<h2 class="fh5co-drinks">Drinks</h2>
+							<h2 class="fh5co-drinks">DESI</h2>
 							<ul>
 								<li>
 									<div class="fh5co-food-desc">
@@ -295,7 +295,7 @@
 										</div>
 									</div>
 									<div class="fh5co-food-pricing">
-										$17.50
+										170 PKR
 									</div>
 								</li>
 								<li>
@@ -323,7 +323,7 @@
 										</div>
 									</div>
 									<div class="fh5co-food-pricing">
-										$12.99
+										12.99 PKR
 									</div>
 								</li>
 								<li>
@@ -337,7 +337,7 @@
 										</div>
 									</div>
 									<div class="fh5co-food-pricing">
-										$12.99
+										12.99 PKR
 									</div>
 								</li>
 							</ul>
@@ -358,7 +358,7 @@
 										</div>
 									</div>
 									<div class="fh5co-food-pricing">
-										$17.50
+										1699 PKR
 									</div>
 								</li>
 								<li>
@@ -372,7 +372,7 @@
 										</div>
 									</div>
 									<div class="fh5co-food-pricing">
-										$7.99
+										788 PKR
 									</div>
 								</li>
 								<li>
@@ -386,7 +386,7 @@
 										</div>
 									</div>
 									<div class="fh5co-food-pricing">
-										$12.99
+										1800 PKR
 									</div>
 								</li>
 								<li>
@@ -400,7 +400,7 @@
 										</div>
 									</div>
 									<div class="fh5co-food-pricing">
-										$12.99
+										2200 PKR
 									</div>
 								</li>
 							</ul>
@@ -421,7 +421,7 @@
 										</div>
 									</div>
 									<div class="fh5co-food-pricing">
-										$17.50
+										220 PKR
 									</div>
 								</li>
 								<li>
@@ -435,7 +435,7 @@
 										</div>
 									</div>
 									<div class="fh5co-food-pricing">
-										$7.99
+										180 PKR
 									</div>
 								</li>
 								<li>
@@ -449,7 +449,7 @@
 										</div>
 									</div>
 									<div class="fh5co-food-pricing">
-										$12.99
+										200 PKR
 									</div>
 								</li>
 								<li>
@@ -463,7 +463,7 @@
 										</div>
 									</div>
 									<div class="fh5co-food-pricing">
-										$12.99
+										130 PKR
 									</div>
 								</li>
 							</ul>
@@ -471,7 +471,7 @@
 					</div>
 					<div class="col-md-6">
 						<div class="fh5co-food-menu to-animate-2">
-							<h2 class="fh5co-dishes">Steak</h2>
+							<h2 class="fh5co-dishes">SEA FOOD</h2>
 							<ul>
 								<li>
 									<div class="fh5co-food-desc">
@@ -484,7 +484,7 @@
 										</div>
 									</div>
 									<div class="fh5co-food-pricing">
-										$17.50
+										2300 PKR
 									</div>
 								</li>
 								<li>
@@ -498,7 +498,7 @@
 										</div>
 									</div>
 									<div class="fh5co-food-pricing">
-										$7.99
+										900 PKR
 									</div>
 								</li>
 								<li>
@@ -512,7 +512,7 @@
 										</div>
 									</div>
 									<div class="fh5co-food-pricing">
-										$12.99
+										600 PKR
 									</div>
 								</li>
 								<li>
@@ -526,7 +526,7 @@
 										</div>
 									</div>
 									<div class="fh5co-food-pricing">
-										$12.99
+										1400 PKR
 									</div>
 								</li>
 							</ul>
