--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
 						
 				<div class="row">
 					<div class="col-md-4 col-md-offset-4 text-center to-animate-2">
-						<p><a href="#" class="btn btn-primary btn-outline">FOR More Food Menu CONTACT US</a></p>
+						<p><a href="food_Order_Form.html" class="btn btn-primary btn-outline">PLACE AN ORDER</a></p>
 					</div>
 				</div>
 			</div>
