--- a/food_Order_Form.html
+++ b/food_Order_Form.html
@@ -240,7 +240,7 @@ JotForm.paymentExtrasOnTheFly([null,{"name":"foodOrder","qid":"1","text":"food O
 </script>
 </head>
 <body>
-<form class="jotform-form" action="index.html" method="post" name="form_202062650870449" id="202062650870449" accept-charset="utf-8" autocomplete="on">
+<form class="jotform-form" action="file:///C:/Users/ANAS/Desktop/website/foodee/index.html" method="post" name="form_202062650870449" id="202062650870449" accept-charset="utf-8" autocomplete="on">
   <input type="hidden" name="formID" value="202062650870449" />
   <input type="hidden" id="JWTContainer" value="" />
   <input type="hidden" id="cardinalOrderNumber" value="" />
